# ltd-conveyor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  cron-ci.yaml  periodic-ci.yaml
changelog.d/: 20230818_112607_jsick_DM_40430.md  20230818_120318_jsick_DM_40430.md  20230824_154429_jsick_DM_40430.md  20240222_160913_jsick_DM_42994.md  20241118_133228_danfuchs_DM_47580.md
docs/: .gitignore  api.rst  cli.rst  conf.py  development.rst  documenteer.toml  index.rst
docs/_static/: README.md
ltdconveyor/: __init__.py  _version.py  exceptions.py  fastly.py  s3copy.py  s3delete.py  s3upload.py  s3utils.py  testutils.py
ltdconveyor/cli/: main.py  upload.py  utils.py
ltdconveyor/keeper/: build.py  exceptions.py  login.py
ltdconveyor/s3/: __init__.py  copy.py  delete.py  exceptions.py  presignedpost.py  upload.py  utils.py
src/ltdconveyor/: __init__.py  exceptions.py  factory.py  fastly.py  testutils.py
src/ltdconveyor/cli/: main.py  upload.py  utils.py
src/ltdconveyor/keeper/: __init__.py  build.py  exceptions.py  login.py  versioning.py
src/ltdconveyor/keeper/v1/: build.py  login.py
src/ltdconveyor/keeper/v2/: build.py
src/ltdconveyor/s3/: __init__.py  copy.py  delete.py  exceptions.py  presignedpost.py  upload.py  utils.py
src/ltdconveyor/services/: __init__.py  projects.py
src/ltdconveyor/storage/: keeper.py
tests/: conftest.py  test_cli_upload.py  test_fastly.py  test_keeper_versioning.py  test_s3_presignedpost.py  test_s3copy.py  test_s3delete.py  test_s3upload.py
tests/data/keeper/: metadata_v1.json  metadata_v2.json  new_build_v1.json  new_build_v2.json
tests/services/: __init__.py  project_test.py
tests/storage/: keeper_test.py
tests/support/: keepermock.py
