[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "ltd-conveyor"
description = "LSST the Docs admin client."
license = {file = "LICENSE"}
readme= "README.rst"
keywords = [
    "rubin",
    "lsst",
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "boto3",
    "requests",
    "uritemplate",
    "click",
    "boto3-stubs[boto3,essential]",
    "httpx",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    # Testing
    "responses",
    "pytest",
    "pytest-mock",
    "coverage[toml]",
    "mypy",
    "types-requests",
    "types-pkg_resources",
    # Documentation
    "documenteer[guide]",
    "sphinx-click",
]

[project.urls]
Homepage = "https://ltd-conveyor.lsst.io"
Source = "https://github.com/lsst-sqre/ltd-conveyor"

[project.scripts]
ltd = "ltdconveyor.cli.main:main"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
where = ["src"]
include = ["ltdconveyor*"]

[tool.coverage.run]
parallel = true
branch = true
source = ["ltdconveyor"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.black]
line-length = 79
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
# Use single-quoted strings so TOML treats the string like a Python r-string
# Multi-line strings are implicitly treated by black as regular expressions

[tool.isort]
profile = "black"
known_first_party = ["ltdconveyor", "tests"]
skip = ["docs/conf.py"]

[tool.scriv]
categories = [
    "Backwards-incompatible changes",
    "New features",
    "Bug fixes",
    "Other changes",
]
entry_title_template = "{{ version }} ({{ date.strftime('%Y-%m-%d') }})"
format = "md"
md_header_level = "2"
new_fragment_template = "file:changelog.d/_template.md.jinja"
skip_fragments = "_template.md.jinja"
