[metadata]
name = ltd-conveyor
description = LSST the Docs admin client.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://ltd-conveyor.lsst.io
project_urls =
    Change log = https://ltd-conveyor.lsst.io/changes.html
    Source code =   https://github.com/lsst-sqre/ltd-conveyor
    Issue tracker = https://github.com/lsst-sqre/ltd-conveyor/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Environment :: Console
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.5
packages = find:
install_requires =
    boto3==1.4.4
    requests>=2.12.4
    uritemplate>=3.0.0,<3.1.0
    click>=6.7,<7.0

[options.packages.find]
exclude =
    docs
    tests

[options.extras_require]
dev =
    responses==0.10.6
    pytest==4.6.3
    pytest-cov==2.7.1
    pytest-flake8==1.0.4
    pytest-mock==1.10.4
    documenteer[pipelines]>=0.3.0,<0.4.0
    sphinx-click>=1.2.0,<1.3.0

[options.entry_points]
console_scripts =
    ltd = ltdconveyor.cli.main:main

[tool:pytest]
addopts = --flake8 --cov=ltdconveyor

[flake8]
max-line-length = 79
exclude =
  docs/conf.py,
  */__init__.py
