[metadata]
name = ltd-conveyor
description = LSST the Docs admin client.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://ltd-conveyor.lsst.io
project_urls =
    Change log = https://ltd-conveyor.lsst.io/changes.html
    Source code =   https://github.com/lsst-sqre/ltd-conveyor
    Issue tracker = https://github.com/lsst-sqre/ltd-conveyor/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Environment :: Console
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
package_dir =
    = src
setup_requires =
  setuptools_scm
install_requires =
    boto3
    requests
    uritemplate
    click

[options.packages.find]
where = src
exclude =
    docs
    tests

[options.extras_require]
dev =
    responses
    pytest
    pytest-mock
    documenteer[pipelines]
    sphinx-click
    coverage[toml]
    Sphinx
    mypy

[options.entry_points]
console_scripts =
    ltd = ltdconveyor.cli.main:main

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP 8
# W503: line break after binary operator, flake8 disagrees with PEP 8
ignore = E203, W503
exclude =
  docs/conf.py,
  */__init__.py

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
